--- a/index.html
+++ b/index.html
@@ -2,25 +2,31 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>QuaggaJS Barcode Scanner</title>
+  <meta name="description" content="QuaggaJS is an advanced barcode-reader written in JavaScript">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="description" content="QuaggaJS is an advanced barcode-reader written in JavaScript" />
-  <meta name="keywords" content="barcode, javascript, canvas, computer vision, image processing, ean, code128" />
-  <meta name="robots" content="index,follow" />
-
+  <!-- Include your CSS files here -->
   <link rel="stylesheet" href="https://serratus.github.io/quaggaJS/stylesheets/styles.css">
   <link rel="stylesheet" href="https://serratus.github.io/quaggaJS/stylesheets/example.css">
   <link rel="stylesheet" href="https://serratus.github.io/quaggaJS/stylesheets/pygment_trac.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <script>
-      var host = "yourdomain.github.io";
-      if ((host == window.location.host) && (window.location.protocol != "https:")) {
-          window.location.protocol = "https";
-      }
-  </script>
+  <style>
+  #interactive {
+    position: relative;
+  }
+
+  #boundingBox {
+    position: absolute;
+    border: 2px dashed red;
+    width: 60%;
+    height: 30%;
+    top: 35%;
+    left: 20%;
+    box-sizing: border-box;
+    pointer-events: none;
+  }
+  </style>
 </head>
 <body>
   <div class="wrapper">
@@ -110,7 +116,10 @@
       <div id="result_strip">
         <ul class="thumbnails"></ul>
       </div>
-      <div id="interactive" class="viewport"></div>
+      <div id="interactive" class="viewport">
+        <!-- Add the bounding box overlay -->
+        <div id="boundingBox"></div>
+      </div>
     </section>
 
     <!-- Include latest adapter.js -->
@@ -118,13 +127,7 @@
     <!-- Include latest Quagga2 library -->
     <script src="https://unpkg.com/@ericblade/quagga2@latest/dist/quagga.js" type="text/javascript"></script>
     <script src="live_w_locator.js" type="text/javascript"></script>
-
-    <footer>
-      <p>This project is maintained by <a href="https://github.com/serratus">Christoph Oberhofer</a></p>
-      <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-    </footer>
   </div>
-
 </body>
    <script src="https://serratus.github.io/quaggaJS/javascripts/scale.fix.js"></script>
 </html>
