--- a/index.html
+++ b/index.html
@@ -12,20 +12,117 @@
   <link rel="stylesheet" href="https://serratus.github.io/quaggaJS/stylesheets/pygment_trac.css">
 
   <style>
-  #interactive {
-    position: relative;
-  }
+    #interactive {
+      position: relative;
+    }
 
-  #boundingBox {
-    position: absolute;
-    border: 2px dashed red;
-    width: 60%;
-    height: 30%;
-    top: 35%;
-    left: 20%;
-    box-sizing: border-box;
-    pointer-events: none;
-  }
+    #boundingBox {
+      position: absolute;
+      border: 2px dashed red;
+      width: 60%;
+      height: 30%;
+      top: 35%;
+      left: 20%;
+      box-sizing: border-box;
+      pointer-events: none;
+    }
+
+    #codeOverlay {
+      position: absolute;
+      top: 35%;
+      left: 20%;
+      width: 60%;
+      height: 30%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #FFFFFF;
+      font-size: 24px;
+      font-weight: bold;
+      text-align: center;
+      pointer-events: none;
+      background-color: rgba(0, 0, 0, 0.5); /* Optional background for readability */
+    }
+
+    /* Loading Indicator Styling */
+    #loadingIndicator {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 18px;
+      color: #FFFFFF;
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 10px 20px;
+      border-radius: 5px;
+      display: none;
+      z-index: 1000;
+    }
+
+    /* Result Strip Styling */
+    #result_strip ul.thumbnails,
+    #result_strip ul.collector {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    #result_strip ul.thumbnails li,
+    #result_strip ul.collector li {
+      margin: 5px;
+      border: 1px solid #ccc;
+      padding: 5px;
+      background-color: #fff;
+    }
+
+    .thumbnail img {
+      max-width: 150px;
+      max-height: 150px;
+      display: block;
+    }
+
+    .caption {
+      text-align: center;
+      margin-top: 5px;
+    }
+
+    .controls {
+      margin-bottom: 20px;
+    }
+
+    .controls fieldset {
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin-bottom: 10px;
+    }
+
+    .controls label {
+      display: block;
+      margin-bottom: 5px;
+    }
+
+    .controls select,
+    .controls input[type="checkbox"],
+    .controls button {
+      margin-right: 10px;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 600px) {
+      #boundingBox,
+      #codeOverlay {
+        width: 80%;
+        left: 10%;
+        height: 25%;
+        top: 37.5%;
+      }
+
+      .controls label {
+        display: block;
+        margin-bottom: 10px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -126,13 +223,15 @@
           </label>
         </fieldset>
       </div>
-      <div id="loadingIndicator" style="display: none;">Loading...</div>
+      <div id="loadingIndicator">Loading...</div>
       <div id="result_strip">
         <ul class="thumbnails"></ul>
       </div>
       <div id="interactive" class="viewport">
         <!-- Add the bounding box overlay -->
         <div id="boundingBox"></div>
+        <!-- Add the code overlay -->
+        <div id="codeOverlay"></div>
       </div>
     </section>
 
@@ -140,8 +239,10 @@
     <script src="https://webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script>
     <!-- Include latest Quagga2 library -->
     <script src="https://unpkg.com/@ericblade/quagga2@latest/dist/quagga.js" type="text/javascript"></script>
+    <!-- Include your main JavaScript file -->
     <script src="live_w_locator.js" type="text/javascript"></script>
+    <!-- Include scale.fix.js script -->
+    <script src="https://serratus.github.io/quaggaJS/javascripts/scale.fix.js"></script>
   </div>
 </body>
-   <script src="https://serratus.github.io/quaggaJS/javascripts/scale.fix.js"></script>
 </html>
