--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
       list-style: none;
       padding: 0;
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: row; /* Ensure horizontal layout */
+      overflow-x: auto;    /* Enable horizontal scrolling */
+      white-space: nowrap; /* Prevent line breaks */
     }
 
     #result_strip ul.thumbnails li,
@@ -74,6 +76,7 @@
       border: 1px solid #ccc;
       padding: 5px;
       background-color: #fff;
+      flex-shrink: 0; /* Prevent items from shrinking */
     }
 
     .thumbnail img {
@@ -121,6 +124,16 @@
       .controls label {
         display: block;
         margin-bottom: 10px;
+      }
+
+      #result_strip ul.thumbnails li,
+      #result_strip ul.collector li {
+        margin: 5px 2px;
+      }
+
+      .thumbnail img {
+        max-width: 100px;
+        max-height: 100px;
       }
     }
   </style>
